--- a/theme/scss/default.scss
+++ b/theme/scss/default.scss
@@ -2,7 +2,7 @@
 @import "compass/css3/columns";
 @import "compass/css3/user-interface";
 
-$social-tags: '#yourhashtag';
+$social-tags: '#responsive_web_design';
 $brand-small-icon-size: 30px;
 
 $gray-1: #e6e6e6;
@@ -837,8 +837,8 @@ article.smaller {
 /* ===== SLIDE CONTENT ===== */
 .logoslide {
   img {
-    width: 383px;
-    height: 92px;
+    width: 100%;
+    height: auto;
   }
 }
 
@@ -911,8 +911,8 @@ aside.gdbar {
   }
 
   img {
-    width: 85px;
-    height: 85px;
+    width: auto;
+    height: 81px;
     position: absolute;
     right: 0;
     margin: 8px 15px;
